[gd_scene load_steps=9 format=2]

[ext_resource path="res://enemies/Enemy.tscn" type="PackedScene" id=1]
[ext_resource path="res://enemies/zorgoth/Zorgoth.gd" type="Script" id=2]
[ext_resource path="res://enemies/zorgoth/sprites/demon-idle.png" type="Texture" id=3]
[ext_resource path="res://enemies/zorgoth/sprites/demon-attack.png" type="Texture" id=4]

[sub_resource type="Animation" id=1]
resource_name = "attack"
length = 1.1
tracks/0/type = "value"
tracks/0/path = NodePath("IdleSprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AttackSprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("AttackSprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10 ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("AttackSprite:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -32, -20 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("BreathArea/CollisionShape2D:disabled")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0.7, 1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}

[sub_resource type="Animation" id=2]
resource_name = "idle"
length = 0.6
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("IdleSprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("AttackSprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("IdleSprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5 ]
}

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 31, 54 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 50, 33 )

[node name="Zorgoth" index="0" instance=ExtResource( 1 )]
script = ExtResource( 2 )

[node name="IdleSprite" parent="." index="0"]
texture = ExtResource( 3 )
hframes = 6
frame = 5

[node name="AttackSprite" type="Sprite" parent="." index="1"]
visible = false
position = Vector2( -32, -20 )
texture = ExtResource( 4 )
hframes = 11
frame = 10

[node name="AnimationPlayer" parent="." index="2"]
playback_process_mode = 0
anims/attack = SubResource( 1 )
anims/idle = SubResource( 2 )

[node name="CollisionShape2D" parent="." index="3"]
position = Vector2( -19, 11 )
shape = SubResource( 3 )

[node name="BackRayCast" parent="." index="4"]
position = Vector2( -24, 60 )

[node name="FrontRayCast" parent="." index="5"]
position = Vector2( -24, 60 )
cast_to = Vector2( -112, 0 )

[node name="GroundRayCast" parent="." index="6"]
position = Vector2( -50, 0 )
cast_to = Vector2( 0, 60 )

[node name="AttackCD" type="Timer" parent="." index="7"]
wait_time = 10.0
one_shot = true

[node name="BreathArea" type="Area2D" parent="." index="8"]
position = Vector2( -90, 32 )
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="BreathArea" index="0"]
shape = SubResource( 4 )
disabled = true
[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="timeout" from="AttackCD" to="." method="_on_AttackCD_timeout"]
[connection signal="body_entered" from="BreathArea" to="." method="_on_BreathArea_body_entered"]
